<package>
  <name>rviz_plugin_interactive_image</name>
  <version>0.0.1</version>
  <description>
      rviz plugin to display an image and let the user click on it
  </description>
  <maintainer email="eric.price@ifr.uni-stuttgart.de">Eric Price</maintainer>
  <license>BSD</license>

  <url>http://github.com/robot-perception-group/</url>
  <author email="eric.price@ifr.uni-stuttgart.de">Eric Price</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
